src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/EXTTimerQuery_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTTimerQuery_StringErrorContext.class */
public final class EXTTimerQuery_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglGetQueryObjecti64vEXT(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTimerQueryErrorContext");
        methods.put("glGetQueryObjecti64vEXT(IILjava/nio/LongBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTimerQueryErrorContext");
        methods.put("glGetQueryObjecti64vEXT(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTimerQueryErrorContext");
        methods.put("glGetQueryObjecti64EXT(II)J", "net/labymod/core/laby3d/opengl/error/generated/EXTTimerQueryErrorContext");
        methods.put("nglGetQueryObjectui64vEXT(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTimerQueryErrorContext");
        methods.put("glGetQueryObjectui64vEXT(IILjava/nio/LongBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTimerQueryErrorContext");
        methods.put("glGetQueryObjectui64vEXT(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTimerQueryErrorContext");
        methods.put("glGetQueryObjectui64EXT(II)J", "net/labymod/core/laby3d/opengl/error/generated/EXTTimerQueryErrorContext");
        methods.put("glGetQueryObjecti64vEXT(II[J)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTimerQueryErrorContext");
        methods.put("glGetQueryObjectui64vEXT(II[J)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTimerQueryErrorContext");
        return methods;
    }
}
